--- a/config/billing_rates.yml
+++ b/config/billing_rates.yml
@@ -1,4 +1,8 @@
 # Active billing rates
+- { id: 4809dd5b-1cdd-4e01-b587-4847a5565592, resource_type: VmCores,                 resource_family: burstable,           location: hetzner-fsn1,   unit_price: 0.0000000000, active_from: 2024-10-15T00:00:00Z }
+- { id: 4520f5ae-f36b-4f99-8b45-15002739b782, resource_type: VmStorage,               resource_family: burstable,           location: hetzner-fsn1,   unit_price: 0.0000000000, active_from: 2024-10-15T00:00:00Z }
+- { id: 6d7381ec-4e1c-408a-8e23-357996b9747e, resource_type: VmCores,                 resource_family: shared,              location: hetzner-fsn1,   unit_price: 0.0000000000, active_from: 2024-10-15T00:00:00Z }
+- { id: 72905600-f48b-4108-b5c4-d6e08caed1d7, resource_type: VmStorage,               resource_family: shared,              location: hetzner-fsn1,   unit_price: 0.0000000000, active_from: 2024-10-15T00:00:00Z }
 - { id: fc9877ec-131c-4572-a3f2-fd512d95b348, resource_type: InferenceTokens,         resource_family: test-model,          location: global,         unit_price: 0.0000000500, billed_by: amount,   active_from: 2024-10-14T00:00:00Z }
 - { id: 74eb807c-75dd-49e4-95f8-5de25163b845, resource_type: InferenceTokens,         resource_family: gemma-2-2b-it,       location: global,         unit_price: 0.0000000000, billed_by: amount,   active_from: 2024-10-14T00:00:00Z }
 - { id: 195bd918-8a0b-4c07-8b57-289de6d6163e, resource_type: InferenceTokens,         resource_family: llama-3-2-3b-it,     location: global,         unit_price: 0.0000000000, billed_by: amount,   active_from: 2024-10-14T00:00:00Z }
