Increase Max RSpec/MultipleMemoizedHelpers to 6.
We needed to add one more memoized helper to several RSpec test suites
when adding VmHostSlice-related RSpec tests, which caused errors like
the following when running rubocop:

```
RSpec/MultipleMemoizedHelpers: Example group has too many memoized
helpers [6/5]
```

The default limit of 5 keeps things simple, but VmHostSlice tests need
more helpers. Raising it to 6 adds flexibility without impacting
simplicity much.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -78,6 +78,9 @@ RSpec/SpecFilePathFormat:
   Exclude:
     - 'spec/routes/**/*.rb'
 
+RSpec/MultipleMemoizedHelpers:
+  Max: 6
+
 Sequel/IrreversibleMigration:
   Enabled: false
 
